connecting with render
