# controllers/users.js
@@ -1,16 +1,18 @@
 const express = require('express');
-const mongodb = require('./data/db');
+const mongodb = require('../data/db');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAllUsers = async (req, res) => {
+  //#swagger.tags = ['Users']
   const result = await mongodb.getDb().db().collection('users').find();
   result.toArray().then((users) => {
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(users[0]);
+    res.status(200).json(users);
   });
 };
 
 const getSingleUser = async (req, res) => {
+  //#swagger.tags = ['Users']
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
@@ -24,16 +26,12 @@ const getSingleUser = async (req, res) => {
 };
 
 const createUser = async (req, res) => {
+  //#swagger.tags = ['Users']
   const newUser = {
-    name: req.body.name,
-    species: req.body.species,
-    breed: req.body.breed,
-    age: req.body.age,
-    gender: req.body.gender,
-    weight: req.body.weight,
-    available: req.body.available,
-    adoptedDate: req.body.adoptedDate,
-    description: req.body.description,
+    userName: req.body.userName,
+    email: req.body.email,
+    password: req.body.password,
+    role: req.body.role,
   };
   const result = await mongodb
     .getDb()
@@ -41,24 +39,20 @@ const createUser = async (req, res) => {
     .collection('users')
     .insertOne(newUser);
   if (result.aknowledged > 0) {
-    res.status(204).send('User created successfully');
+    res.status(204).send();
   } else {
     res.status(500).json(result.err || 'Error creating User');
   }
 };
 
 const updateUser = async (req, res) => {
+  //#swagger.tags = ['Users']
   const userId = new ObjectId(req.params.id);
   const updatedUser = {
-    name: req.body.name,
-    species: req.body.species,
-    breed: req.body.breed,
-    age: req.body.age,
-    gender: req.body.gender,
-    weight: req.body.weight,
-    available: req.body.available,
-    adoptedDate: req.body.adoptedDate,
-    description: req.body.description,
+    userName: req.body.userName,
+    email: req.body.email,
+    password: req.body.password,
+    role: req.body.role,
   };
   const result = await mongodb
     .getDb()
@@ -66,13 +60,14 @@ const updateUser = async (req, res) => {
     .collection('users')
     .updateOne({ _id: userId }, { $set: updatedUser });
   if (result.modifiedCount > 0) {
-    res.status(204).send('User updated successfully');
+    res.status(204).send();
   } else {
     res.status(500).json(result.err || 'Error updating user');
   }
 };
 
 const deleteUser = async (req, res) => {
+  //#swagger.tags = ['Users']
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
@@ -80,7 +75,7 @@ const deleteUser = async (req, res) => {
     .collection('users')
     .deleteOne({ _id: userId });
   if (result.deletedCount > 0) {
-    res.status(204).send('User deleted successfully');
+    res.status(204).send();
   } else {
     res.status(500).json(result.err || 'Error deleting User');
   }
